2010-10-15 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-sky-glance.[ch]:
    Minor cleaning and improved documentation.


2010-10-10 Alexandru Csete <oz9aec at gmail.com>

    * Gpredict 1.2 released.

    * configure.ac:
    Change version to 1.2

    * NEWS:
    * TODO:
    Updated for version 1.2

    * data/satdata:
    Updated top altest TLE.

    * src/gtk-sat-selector.c:
    Remove erroneous dependency introduced with patch 3050047.
    GtkSatTree is deprecated and using it breaks build from tarballs.

    * src/gtk-rig-ctrl.c:
    Not sure what 'NULL' was supposed to mean here, but the rewritten
    code is equivalent and gives no warnings.


2010-10-10 Alexandru Csete <oz9aec at gmail.com>

    * po:
    Imported available translations from the Launchpad.


2010-10-02 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-rig-ctrl.c
    Fix bug with set and unset toggle buffer size being incorrect
    causing junk to be sent to rigctld.

    * src/gtk-rig-ctrl.c
    * src/gtk-rot-ctrl.c
    Catch NULLs in ctrl->conf

    * src/sat-pref-qth.c
    * src/sat-pref-rig.c
    * src/sat-pref-rot.c
    Add sorting to rig, rot, and qth preference screens.

2010-09-24 Charles Suprin <hamaa1vs at gmail.com>

    * src/first-time.c
    Applied patch from bug 3074990 from Zlika catching crash if data
    directory does not exist. Added error message to log.

2010-09-17 Charles Suprin <hamaa1vs at gmail.com>

    * src/first-time.c
    * src/gtk-sat-selector.c
    * src/gtk-sat-tree.c
    * src/main.c
    * src/mod-cfg.c
    * src/sat-log.c
    * src/sat-pref-qth.c
    * src/tle-update.c
    Make file name checks check for suffix not substring

    * src/gtk-rig-ctrl.c
    * src/gtk-rot-ctrl.c
    Fix potential memory leak

2010-09-14 Alexandru Csete <oz9aec at gmail.com>

    * data/satdata:
    Updated satellite database.

2010-08-21 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-sat-module.c: